--- a/src/components/modules/Chart.module.css
+++ b/src/components/modules/Chart.module.css
@@ -29,3 +29,7 @@ backdrop-filter: blur(3px);
     border: 2px solid #404042;
     border-radius: 20px;
 }
+.graph{
+    width: 760px;
+    height: 300px;
+}
